--- a/styles.css
+++ b/styles.css
@@ -20,10 +20,12 @@ body {
 
 .container {
     background-color: white;
+    border: 1px solid;
     border-radius: 10px;
     width: 23rem;
-    height: 32rem;
+    height: 34rem;
     padding: 1rem;
+    box-shadow: 10px 10px;
 }
 
 img {
@@ -37,9 +39,25 @@ img {
     border-radius: 5px;
     margin-top: 1rem;
     margin-bottom: 1rem;
+}
 
+h2 {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
 }
 
 p {
     color: hsl(0, 0%, 42%);
+}
+.para {
+    line-height: 150%;
+}
+.greg {
+    display: flex;
+    margin-top: 1rem;
+}
+.hooper {
+    display: inline-block;
+    margin-top: 22px;
+    margin-left: 5px;
 }
