--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,24 @@
 body {
     background-color: hsl(47, 88%, 63%);
     font-family: Figtree, sans-serif;
+    background: linear-gradient(270deg, hsl(47, 88%, 63%),hsl(54, 66%, 72%),hsl(73, 7%, 40%));
+    background-size: 400% 400%;
+    animation: moveGradient 6s ease infinite;
     
+}
+
+@keyframes moveGradient {
+0% {
+    background-position: 0% 50%;
+}
+
+50% {
+    background-position: 100% 50%;
+}
+
+100% {
+    background-position: 0% 50%;
+}
 }
 
 .main {
